convert project to java 11